# CG_AWS_MLS_demo_project

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
src/aws_ml_demo/: user_stream.py
